- cvt/Tracker.py: Fixed the aspect ratio constraint. I was computing a ratio<1 instead of >1. I was also forgetting to take the square root of the eigenvalues of the matrix of second moments.
- cvt/Tracker.py: Changed the core tracking data structure from pandas.DataFrame to numpy.array. It makes it easier to slice along either the frame axis, fish axis, or quantity axis, all of which come up during tracking.
  In "Analysis.ipynb" the numpy array is loaded into a pandas dataframe identical to what we had before. The one difference is that I no longer save frame number; I may need to fix that in the future. The rest of the analysis should be unimpacted.

- video_corruption: Added "Detect_and_Repair.ipynb" which uses the ffmpeg-based module PythonVideoConverter to detect and repair corrupt videos of the kind the larval schooling project has been producing.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']"
+       "['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']"
       ]
      },
      "metadata": {},
@@ -163,8 +163,11 @@
     "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/testing_snippets/*_60-120.avi'))\n",
+    "\n",
     "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
-    "input_files = ['../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
+    "input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
+    "# input_files = ['../raw_videos/repaired/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/SF_Sat_7dpf_GroupA_n2a_CORRUPT.avi']\n",
     "\n",
     "# input_files = []\n",
     "# for f in sorted(glob('../raw_videos/*.avi')):\n",
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -198,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n"
+      "../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n"
      ]
     }
    ],
@@ -221,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+      "../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n",
       "\n",
-      "       Current tracking time: 00:01:09:70 \n",
+      "       Current tracking time: 00:06:30:00 \n",
       "       Video capture released.\n"
      ]
     }
@@ -246,13 +249,13 @@
     "\n",
     "\n",
     "# tweaks = dict(t_start = 4, t_end = 5,\n",
-    "tweaks = dict(t_start = 30, t_end = 70,\n",
+    "tweaks = dict(t_start = 380, t_end = 390,\n",
     "# tweaks = dict(t_start = 0, t_end = -1,\n",
-    "              n_pixel_blur   =  5,    # square-root of n-pixels for threshold blurring\n",
+    "              n_pixel_blur   =  7,    # square-root of n-pixels for threshold blurring\n",
     "              block_size     = 15,    # contour block size\n",
-    "              thresh_offset  = 10,    # threshold offset for contour-finding\n",
+    "              thresh_offset  = 13,    # threshold offset for contour-finding\n",
     "              min_area       = 30,    # minimum area for detection\n",
-    "              max_area       = 150,   # maximum area for detection\n",
+    "              max_area       = 500,   # maximum area for detection\n",
     "              max_aspect     = 10,    # maximum aspect ratio for detection\n",
     "              area_penalty   = 0.5,   # weight of area change when connecting fish across frames\n",
     "              reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
@@ -295,14 +298,14 @@
     "                # Use b to output detailed information about the subset of the frames.\n",
     "                # Whenever b evaluates to True, images are saved in \"[output_dir]/frames\" \n",
     "                # showing each step of the tracking process.\n",
-    "                b = False # True # 260<tracker.frame_num<275 # \n",
+    "                b = True # False # 260<tracker.frame_num<275 # \n",
     "                if b:\n",
     "                    if not os.path.exists(frames_dir):\n",
     "                        os.mkdir(frames_dir)\n",
-    "                    cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
+    "#                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
     "                tracker.subtract_background()\n",
-    "                if b:\n",
-    "                    cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_subtracted.png'),tracker.frame)\n",
+    "#                 if b:\n",
+    "#                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_subtracted.png'),tracker.frame)\n",
     "                tracker.mask_tank()\n",
     "                tracker.detect_contours()\n",
     "                tracker.connect_frames()\n",
@@ -318,15 +321,15 @@
     "                tracker.write_frame()\n",
     "                if not tracker.post_frame(delay=1):\n",
     "                    break\n",
-    "                if i_frame%10==0:\n",
-    "                    tracker.print_current_frame()\n",
+    "#                 if i_frame%10==0:\n",
+    "                tracker.print_current_frame()\n",
     "        tracker.release()\n",
     "    except:\n",
     "        tracker.release()\n",
     "        %tb\n",
     "\n",
     "    tracker.save_trial()\n",
-    "    return\n",
+    "    return tracker\n",
     "\n",
     "\n",
     "# display(input_files)\n",
@@ -335,7 +338,7 @@
     "if n_threads==1:\n",
     "\n",
     "    for input_file in input_files:\n",
-    "        track(input_file)\n",
+    "        tracker = track(input_file)\n",
     "    \n",
     "else:\n",
     "    \n",
@@ -386,9 +389,10 @@
     "    circle = plt.Circle( (tank.x_px,tank.y_px), tank.r_px,\n",
     "                         facecolor='None', edgecolor='k', lw=0.5 )\n",
     "    plt.gca().add_patch(circle)\n",
-    "    for fish in df.columns.levels[0]:\n",
-    "        x,y,theta,area = df[fish].values.T\n",
-    "        plt.plot(x,y,marker='o',ms=2,mew=0.5,mfc='None',lw=0,label=str(fish))\n",
+    "    for fish in range(data.shape[1]):\n",
+    "        x,y,theta,area = data[:,fish].T\n",
+    "#         plt.plot(x,y,marker='o',ms=2,mew=0.5,mfc='None',lw=0,label=str(fish))\n",
+    "        plt.plot(x,y,lw=1,label=str(fish))\n",
     "    plt.axis('equal')\n",
     "    plt.gca().yaxis.set_inverted(True)\n",
     "    plt.legend()\n",
@@ -401,15 +405,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(df[4].values[:5,:3])\n",
-    "\n",
-    "x = df[4].values[:,0]\n",
-    "y = df[4].values[:,1]\n",
-    "a = df[4].values[:,2]\n",
-    "\n",
-    "dot = (x[1:]-x[:-1])*np.cos(a[:-1]) + (y[1:]-y[:-1])*np.sin(a[:-1])\n",
-    "print(dot)\n",
-    "print(np.mean(dot))"
+    "np.sum(np.isnan(data))/data.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.shape,data.size,np.sum(np.isnan(data)))"
    ]
   },
   {
