--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['test/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000/trial.pik',\n",
-       " 'test/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000/trial.pik']"
+       "['test/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg/trial.pik']"
       ]
      },
      "metadata": {},
@@ -71,24 +70,9 @@
        "      <th></th>\n",
        "      <th colspan=\"4\" halign=\"left\">0</th>\n",
        "      <th colspan=\"4\" halign=\"left\">1</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">2</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">3</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">4</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th>x_px</th>\n",
-       "      <th>y_px</th>\n",
-       "      <th>ang</th>\n",
-       "      <th>area</th>\n",
-       "      <th>x_px</th>\n",
-       "      <th>y_px</th>\n",
-       "      <th>ang</th>\n",
-       "      <th>area</th>\n",
-       "      <th>x_px</th>\n",
-       "      <th>y_px</th>\n",
-       "      <th>ang</th>\n",
-       "      <th>area</th>\n",
        "      <th>x_px</th>\n",
        "      <th>y_px</th>\n",
        "      <th>ang</th>\n",
@@ -108,115 +92,53 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1801</th>\n",
-       "      <td>1500.792023</td>\n",
-       "      <td>735.712251</td>\n",
-       "      <td>0.062246</td>\n",
-       "      <td>58.5</td>\n",
-       "      <td>1471.845938</td>\n",
-       "      <td>726.630252</td>\n",
-       "      <td>-0.679472</td>\n",
-       "      <td>59.5</td>\n",
-       "      <td>1103.768448</td>\n",
-       "      <td>816.681934</td>\n",
-       "      <td>-0.290330</td>\n",
-       "      <td>65.5</td>\n",
-       "      <td>850.261728</td>\n",
-       "      <td>644.335802</td>\n",
-       "      <td>0.231995</td>\n",
-       "      <td>67.5</td>\n",
-       "      <td>1092.965035</td>\n",
-       "      <td>861.948718</td>\n",
-       "      <td>1.481761</td>\n",
-       "      <td>71.5</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1386.988764</td>\n",
+       "      <td>687.951311</td>\n",
+       "      <td>1.355983</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1802</th>\n",
-       "      <td>1501.182336</td>\n",
-       "      <td>735.803419</td>\n",
-       "      <td>0.034510</td>\n",
-       "      <td>58.5</td>\n",
-       "      <td>1471.564738</td>\n",
-       "      <td>726.721763</td>\n",
-       "      <td>-0.698818</td>\n",
-       "      <td>60.5</td>\n",
-       "      <td>1103.239186</td>\n",
-       "      <td>816.865140</td>\n",
-       "      <td>-0.288911</td>\n",
-       "      <td>65.5</td>\n",
-       "      <td>850.378788</td>\n",
-       "      <td>644.348485</td>\n",
-       "      <td>0.220397</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>1092.986207</td>\n",
-       "      <td>861.894253</td>\n",
-       "      <td>1.485195</td>\n",
-       "      <td>72.5</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1387.024096</td>\n",
+       "      <td>688.184739</td>\n",
+       "      <td>1.363917</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1803</th>\n",
-       "      <td>1500.944444</td>\n",
-       "      <td>735.836111</td>\n",
-       "      <td>0.039423</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1471.494152</td>\n",
-       "      <td>726.795322</td>\n",
-       "      <td>-0.718249</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>1103.624339</td>\n",
-       "      <td>816.595238</td>\n",
-       "      <td>-0.260666</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>850.536341</td>\n",
-       "      <td>644.348371</td>\n",
-       "      <td>0.223180</td>\n",
-       "      <td>66.5</td>\n",
-       "      <td>1092.936508</td>\n",
-       "      <td>861.596372</td>\n",
-       "      <td>1.479325</td>\n",
-       "      <td>73.5</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1387.144578</td>\n",
+       "      <td>688.526104</td>\n",
+       "      <td>1.377465</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 0                                        1              \\\n",
-       "              x_px        y_px       ang  area         x_px        y_px   \n",
-       "frame                                                                     \n",
-       "1801   1500.792023  735.712251  0.062246  58.5  1471.845938  726.630252   \n",
-       "1802   1501.182336  735.803419  0.034510  58.5  1471.564738  726.721763   \n",
-       "1803   1500.944444  735.836111  0.039423  60.0  1471.494152  726.795322   \n",
-       "\n",
-       "                                 2                                       3  \\\n",
-       "            ang  area         x_px        y_px       ang  area        x_px   \n",
-       "frame                                                                        \n",
-       "1801  -0.679472  59.5  1103.768448  816.681934 -0.290330  65.5  850.261728   \n",
-       "1802  -0.698818  60.5  1103.239186  816.865140 -0.288911  65.5  850.378788   \n",
-       "1803  -0.718249  57.0  1103.624339  816.595238 -0.260666  63.0  850.536341   \n",
-       "\n",
-       "                                             4                              \n",
-       "             y_px       ang  area         x_px        y_px       ang  area  \n",
-       "frame                                                                       \n",
-       "1801   644.335802  0.231995  67.5  1092.965035  861.948718  1.481761  71.5  \n",
-       "1802   644.348485  0.220397  66.0  1092.986207  861.894253  1.485195  72.5  \n",
-       "1803   644.348371  0.223180  66.5  1092.936508  861.596372  1.479325  73.5  "
+       "                 0                                1              \n",
+       "              x_px        y_px       ang  area x_px y_px ang area\n",
+       "frame                                                            \n",
+       "1      1386.988764  687.951311  1.355983  44.5  NaN  NaN NaN  NaN\n",
+       "2      1387.024096  688.184739  1.363917  41.5  NaN  NaN NaN  NaN\n",
+       "3      1387.144578  688.526104  1.377465  41.5  NaN  NaN NaN  NaN"
       ]
      },
      "metadata": {},
@@ -225,10 +147,11 @@
    ],
    "source": [
     "# trial_files = sorted(glob('../tracking/full/*/trial.pik'))\n",
-    "trial_files = sorted(glob('test/*/trial.pik'))\n",
+    "# trial_files = sorted(glob('test/*/trial.pik'))\n",
+    "trial_files = ['test/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg/trial.pik']\n",
     "display(trial_files)\n",
     "\n",
-    "trial_file  = trial_files[1]\n",
+    "trial_file  = trial_files[0]\n",
     "\n",
     "\n",
     "pop,_,age,group,Nfish = os.path.basename(os.path.dirname(trial_file)).split('_')[:5]\n",
@@ -241,8 +164,13 @@
     "# print(trial) #.keys())\n",
     "globals().update(trial)\n",
     "\n",
+    "# Load the tracking data, originally a numpy.array, into a pandas.DataFrame.\n",
+    "df = pd.DataFrame( data.reshape((data.shape[0],-1)))\n",
+    "df.columns = pd.MultiIndex.from_product([ range(n_ind), ['x_px','y_px','ang','area'] ])\n",
+    "df.index = pd.Index(frame_list, name='frame')\n",
+    "\n",
     "display(df[:3])\n",
-    "# trial.df.to_excel(trial.output_dir+'/df.xlsx')"
+    "# # trial.df.to_excel(trial.output_dir+'/df.xlsx')"
    ]
   },
   {
@@ -462,8 +390,8 @@
     "    df[f,'v_y']    = df[f,'y'].diff()*fps\n",
     "    df[f,'v']      = np.hypot(df[f,'v_x'],df[f,'v_y'])\n",
     "    \n",
-    "    ang_diff             = df[f,'ang'].diff()\n",
-    "    ang_diff            -= 2*np.pi*np.rint(ang_diff/(2*np.pi))\n",
+    "    ang_diff       = df[f,'ang'].diff()\n",
+    "    ang_diff      -= 2*np.pi*np.rint(ang_diff/(2*np.pi))\n",
     "    df[f,'v_ang']  = ang_diff*fps\n",
     "    \n",
     "# Reorder columns.\n",
