- Track.ipynb: Now checking for repaired videos and using them instead of the original video if available.
- cvt/TrAQ/Tank.py: Changed the tank detection interface. Once three points have been clicked the circle is drawn. Click a new point erases the oldest point then recomputes and redraws the circle. Continue until the circle is acceptable, then hit space once to validate.

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -167,7 +167,7 @@
     "# Load the tracking data, originally a numpy.array, into a pandas.DataFrame.\n",
     "df = pd.DataFrame( data.reshape((data.shape[0],-1)))\n",
     "df.columns = pd.MultiIndex.from_product([ range(n_ind), ['x_px','y_px','ang','area'] ])\n",
-    "df.index = pd.Index(frame_list, name='frame')\n",
+    "df.index = pd.Index(time, name='frame')\n",
     "\n",
     "display(df[:3])\n",
     "# # trial.df.to_excel(trial.output_dir+'/df.xlsx')"
