--- a/Track.ipynb
+++ b/Track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "from cvt.TrAQ.Tank import Tank\n",
     "from cvt.TrAQ.Tracker import Tracker\n",
     "from cvt.utils import *\n",
+    "from converter import Converter\n",
     "\n",
     "\n",
     "tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:33.8 }\n",
@@ -29,14 +30,14 @@
     "    t_end          = -1,    # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
-    "    n_pixel_blur   =  5,    # square-root of n-pixels for threshold blurring\n",
+    "    n_pixel_blur   =  7,    # square-root of n-pixels for threshold blurring\n",
     "    block_size     = 15,    # contour block size\n",
     "    thresh_offset  = 13,    # threshold offset for contour-finding\n",
-    "    min_area       = 20,    # minimum area for detection\n",
-    "    max_area       = 100,   # maximum area for detection\n",
+    "    min_area       = 30,    # minimum area for detection\n",
+    "    max_area       = 400,   # maximum area for detection\n",
     "    max_aspect     = 10,    # maximum aspect ratio for detection\n",
-    "    area_penalty   = 1,     # weight of area change when connecting fish across frames\n",
-    "    reversal_threshold = None, # average frame-to-frame displacement against the director \n",
+    "    area_penalty   = 0.5,   # weight of area change when connecting fish across frames\n",
+    "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
     "                            # over the last few frames to trigger a reversal. \n",
     "    RGB            = True,  # track in color, false does greyscale\n",
     "    online_viewer  = False, # Toggle live preview of tracking.\n",
@@ -47,13 +48,12 @@
     "                           contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
     "    \n",
     "    # What information to draw on the tracking output video.\n",
-    "    video_output_options = dict( tank=False, points=False, directors=True, timestamp=True, \n",
+    "    video_output_options = dict( tank=True, points=False, directors=True, timestamp=True, \n",
     "                                 contours=True, contour_color=(0,200,255), contour_thickness=1 )\n",
     "    )\n",
     "\n",
     "\n",
     "def create_settings_(input_file, tracking_dir, settings):\n",
-    "    \n",
     "    globals().update(settings)\n",
     "    \n",
     "    ''' Extract trial info from the filename. '''\n",
@@ -67,9 +67,9 @@
     "    new_input_file = input_file\n",
     "    if not 'windows' in platform.system().lower():\n",
     "        new_input_file = join(output_dir,'raw'+ext)\n",
-    "#     settings_file = join(output_dir,'settings.txt')\n",
     "    trial_file    = join(output_dir,'trial.pik')\n",
     "    tank_file     = join(output_dir,'tank.pik')\n",
+    "    log_file      = join(output_dir,'log.txt')\n",
     "    \n",
     "    # Return as a settings dictionary.\n",
     "    for k,v in locals().items():\n",
@@ -89,29 +89,7 @@
     "    if not 'windows' in platform.system().lower():\n",
     "        if not os.path.exists(new_input_file):\n",
     "            os.symlink(os.path.relpath(input_file,output_dir),new_input_file)\n",
-    "    return\n",
-    "\n",
-    "\n",
-    "# def save_settings(settings):\n",
-    "#     with open(settings['settings_file'],'w') as fh:\n",
-    "#         for k,v in settings.items():\n",
-    "#             print(f'{k} = {v}',file=fh)\n",
-    "#     return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cvt\n",
-    "reload(cvt.utils)\n",
-    "from cvt.utils import *\n",
-    "reload(cvt.TrAQ.Tank)\n",
-    "from cvt.TrAQ.Tank import Tank\n",
-    "reload(cvt.TrAQ.Tracker)\n",
-    "from cvt.TrAQ.Tracker import Tracker"
+    "    return"
    ]
   },
   {
@@ -129,13 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']"
+       "['../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2b_30FPS-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupC_n2_0000-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupC_n2b_30FPS-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupD_n2_0000-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupD_n2b_30FPS-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupA_n5_15FPS.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupB_n5_0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupC_n5_0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupD_n5_0000.avi']"
       ]
      },
      "metadata": {},
@@ -143,41 +130,44 @@
     }
    ],
    "source": [
-    "# tracking_dir = '../tracking/full' # use this one to track full videos\n",
-    "# tracking_dir = '../tracking/partial' # use this one to track small excerpts\n",
-    "tracking_dir = 'test'\n",
+    "tracking_dir = '../tracking/full'\n",
+    "# tracking_dir = 'test'\n",
     "\n",
     "def create_settings(input_file,tracking_dir=tracking_dir,settings=default_settings):\n",
     "    return create_settings_(input_file,tracking_dir,settings)\n",
     "\n",
     "#-----------------------------\n",
     "\n",
-    "n_threads = None\n",
-    "# Multi-threading doesn't work in Windows. If the OS is Windows, multi-threading doesn't work, set n_thread to 1.\n",
+    "n_threads = 4 # None\n",
+    "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
     "if 'windows' in platform.system().lower():\n",
     "    n_threads = 1\n",
     "\n",
     "#-----------------------------\n",
     "\n",
-    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
-    "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_*.avi'))\n",
-    "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_*.avi'))\n",
-    "# input_files = sorted(glob('../raw_videos/testing_snippets/*_60-120.avi'))\n",
-    "\n",
-    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
-    "input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
-    "# input_files = ['../raw_videos/repaired/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg.avi']\n",
     "# input_files = ['../raw_videos/google-drive/SF_Sat_7dpf_GroupA_n2a_CORRUPT.avi']\n",
-    "\n",
-    "# input_files = []\n",
-    "# for f in sorted(glob('../raw_videos/*.avi')):\n",
-    "#     print(f)\n",
-    "#     settings = create_settings(f)\n",
-    "#     if not os.path.exists(settings['trial_file']):\n",
-    "#         input_files.append(f)\n",
-    "# display(input_files)\n",
+    "# input_files = ['../raw_videos/repaired/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
+    "# input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
+    "# input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi']\n",
     "\n",
     "# input_files = sorted(glob('./test/input/*.avi'))\n",
+    "input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_14dpf_*.avi'))\n",
+    "\n",
+    "\n",
+    "# Filter out corrupt videos. Replace them with repaired video if available.\n",
+    "def swap_repaired_version(f):\n",
+    "    d,fn = os.path.split(f)\n",
+    "    fn,ext = os.path.splitext(fn)\n",
+    "    f2   = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
+    "    return f2 if os.path.exists(f2) else f\n",
+    "\n",
+    "input_files = [ swap_repaired_version(f) for f in input_files ]\n",
+    "\n",
+    "\n",
+    "# Filter out videos that already have a tracking output in the current tracking_dir.\n",
+    "input_files = [ f for f in input_files if not os.path.exists(create_settings(f)['trial_file']) ]\n",
+    "\n",
     "\n",
     "# input_files = input_files[1:2]\n",
     "display(input_files)"
@@ -192,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -201,40 +191,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n"
-     ]
-    }
-   ],
-   "source": [
-    "for input_file in input_files:\n",
-    "    print(input_file)\n",
-    "    settings = create_settings(input_file)\n",
-    "    create_directories(settings)\n",
-    "    globals().update(settings)\n",
-    "    tank = Tank()\n",
-    "    tank.load_or_locate_and_save(tank_file,input_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Track"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n",
-      "\n",
-      "       Current tracking time: 00:06:30:00 \n",
-      "       Video capture released.\n"
+      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi\n",
+      "     Tank detection interrupted.\n"
      ]
     }
    ],
@@ -248,24 +206,49 @@
     "from cvt.TrAQ.Tracker import Tracker\n",
     "\n",
     "\n",
-    "# tweaks = dict(t_start = 4, t_end = 5,\n",
-    "tweaks = dict(t_start = 380, t_end = 390,\n",
-    "# tweaks = dict(t_start = 0, t_end = -1,\n",
-    "              n_pixel_blur   =  7,    # square-root of n-pixels for threshold blurring\n",
-    "              block_size     = 15,    # contour block size\n",
-    "              thresh_offset  = 13,    # threshold offset for contour-finding\n",
-    "              min_area       = 30,    # minimum area for detection\n",
-    "              max_area       = 500,   # maximum area for detection\n",
-    "              max_aspect     = 10,    # maximum aspect ratio for detection\n",
-    "              area_penalty   = 0.5,   # weight of area change when connecting fish across frames\n",
-    "              reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
-    "                                      # over the last few frames to trigger a reversal. \n",
-    "              online_viewer  = False, \n",
-    "              video_output_options = dict( tank=True, points=False, directors=True, timestamp=True, \n",
-    "                                           contours=True, contour_color=(0,0,255), contour_thickness=1 ),\n",
-    "                                           # Note: There's no point drawing the tank since we're masking\n",
-    "                                           # everything outside the tank anyway.\n",
-    "             )\n",
+    "for input_file in input_files[:1]:\n",
+    "    print(input_file)\n",
+    "    settings = create_settings(input_file)\n",
+    "    create_directories(settings)\n",
+    "    globals().update(settings)\n",
+    "    tank = Tank()\n",
+    "    tank.load_or_locate_and_save(tank_file,input_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Track"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import cvt\n",
+    "reload(cvt.utils)\n",
+    "from cvt.utils import *\n",
+    "reload(cvt.TrAQ.Tank)\n",
+    "from cvt.TrAQ.Tank import Tank\n",
+    "reload(cvt.TrAQ.Tracker)\n",
+    "from cvt.TrAQ.Tracker import Tracker\n",
+    "\n",
+    "\n",
+    "tweaks = dict()\n",
     "\n",
     "def track(input_file):\n",
     "    \n",
@@ -275,65 +258,78 @@
     "    settings.update(tweaks)\n",
     "    # save_settings(settings)\n",
     "    globals().update(settings)\n",
+    "    \n",
+    "    with open(log_file,'w') as log:\n",
+    "        \n",
+    "        log.write('Initializing...\\n')\n",
+    "        tracker = Tracker( input_video=new_input_file, output_dir=output_dir, \n",
+    "                           n_ind=Nfish, t_start=t_start, t_end=t_end, \n",
+    "                           n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
+    "                           threshold_offset=thresh_offset, \n",
+    "                           min_area=min_area, max_area=max_area, \n",
+    "                           max_aspect=max_aspect, area_penalty=area_penalty, \n",
+    "                           reversal_threshold=reversal_threshold, \n",
+    "                           bkgSub_options=bkgSub_options, RGB=True, live_preview=online_viewer)\n",
     "\n",
-    "    tracker = Tracker( input_video=new_input_file, output_dir=output_dir, \n",
-    "                       n_ind=Nfish, t_start=t_start, t_end=t_end, \n",
-    "                       n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "                       threshold_offset=thresh_offset, \n",
-    "                       min_area=min_area, max_area=max_area, \n",
-    "                       max_aspect=max_aspect, area_penalty=area_penalty, \n",
-    "                       reversal_threshold=reversal_threshold, \n",
-    "                       bkgSub_options=bkgSub_options, RGB=True, live_preview=online_viewer)\n",
+    "        tracker.save_settings()\n",
     "\n",
-    "    tracker.save_settings()\n",
+    "        frames_dir = join(output_dir,'frames')\n",
     "\n",
-    "    frames_dir = join(output_dir,'frames')\n",
-    "\n",
-    "    try:\n",
-    "        tracker.set_frame(tracker.frame_start)\n",
-    "        tracker.init_live_preview()\n",
-    "        print()\n",
-    "        for i_frame in range(tracker.frame_start, tracker.frame_end+1):\n",
-    "            if tracker.get_next_frame():\n",
-    "                # Use b to output detailed information about the subset of the frames.\n",
-    "                # Whenever b evaluates to True, images are saved in \"[output_dir]/frames\" \n",
-    "                # showing each step of the tracking process.\n",
-    "                b = True # False # 260<tracker.frame_num<275 # \n",
-    "                if b:\n",
-    "                    if not os.path.exists(frames_dir):\n",
-    "                        os.mkdir(frames_dir)\n",
-    "#                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
-    "                tracker.subtract_background()\n",
-    "#                 if b:\n",
-    "#                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_subtracted.png'),tracker.frame)\n",
-    "                tracker.mask_tank()\n",
-    "                tracker.detect_contours()\n",
-    "                tracker.connect_frames()\n",
-    "                if b:\n",
-    "                    cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-3_masked.png'),tracker.frame)\n",
-    "                    video_output_options.update(directors=False)\n",
+    "        try:\n",
+    "            tracker.set_frame(tracker.frame_start)\n",
+    "            tracker.init_live_preview()\n",
+    "            print()\n",
+    "            for i_frame in range(tracker.frame_start, tracker.frame_end+1):\n",
+    "                \n",
+    "                if i_frame%100==0:\n",
+    "                    i1,i2 = i_frame-tracker.frame_start, tracker.frame_end-tracker.frame_start\n",
+    "                    log.write(f'Tracking frame {i1}/{i2}...\\n')\n",
+    "                    log.flush()\n",
+    "                \n",
+    "                if tracker.get_next_frame():\n",
+    "                    # Use b to output detailed information about the subset of the frames.\n",
+    "                    # Whenever b evaluates to True, images are saved in \"[output_dir]/frames\" \n",
+    "                    # showing each step of the tracking process.\n",
+    "                    b = False # True # 260<tracker.frame_num<275 # \n",
+    "                    if b:\n",
+    "                        if not os.path.exists(frames_dir):\n",
+    "                            os.mkdir(frames_dir)\n",
+    "    #                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
+    "                    tracker.subtract_background()\n",
+    "    #                 if b:\n",
+    "    #                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_subtracted.png'),tracker.frame)\n",
+    "                    tracker.mask_tank()\n",
+    "                    tracker.detect_contours()\n",
+    "                    tracker.connect_frames()\n",
+    "                    if b:\n",
+    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-3_masked.png'),tracker.frame)\n",
+    "                        video_output_options.update(directors=False)\n",
+    "                        tracker.draw(**video_output_options)\n",
+    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-4_contours.png'),tracker.frame)\n",
+    "                        video_output_options.update(directors=True)\n",
     "                    tracker.draw(**video_output_options)\n",
-    "                    cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-4_contours.png'),tracker.frame)\n",
-    "                    video_output_options.update(directors=True)\n",
-    "                tracker.draw(**video_output_options)\n",
-    "                if b:\n",
-    "                    cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-5_directors.png'),tracker.frame)\n",
-    "                tracker.write_frame()\n",
-    "                if not tracker.post_frame(delay=1):\n",
-    "                    break\n",
-    "#                 if i_frame%10==0:\n",
-    "                tracker.print_current_frame()\n",
-    "        tracker.release()\n",
-    "    except:\n",
-    "        tracker.release()\n",
-    "        %tb\n",
-    "\n",
-    "    tracker.save_trial()\n",
+    "                    if b:\n",
+    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-5_directors.png'),tracker.frame)\n",
+    "                    tracker.write_frame()\n",
+    "                    if not tracker.post_frame(delay=1):\n",
+    "                        break\n",
+    "    #                 if i_frame%10==0:\n",
+    "                    tracker.print_current_frame()\n",
+    "            tracker.release()\n",
+    "            \n",
+    "        except:\n",
+    "            tracker.release()\n",
+    "            log.write('\\nFailed\\n')\n",
+    "            %tb\n",
+    "    \n",
+    "        log.write('Saving...\\n')\n",
+    "        tracker.save_trial()\n",
+    "        \n",
     "    return tracker\n",
     "\n",
     "\n",
     "# display(input_files)\n",
-    "n_threads = 1\n",
+    "# n_threads = 4\n",
     "\n",
     "if n_threads==1:\n",
     "\n",
