--- a/video_corruption/Detect_and_Repair.ipynb
+++ b/video_corruption/Detect_and_Repair.ipynb
@@ -2,18 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from glob import glob\n",
-    "from converter import Converter"
+    "from converter import Converter\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_dir = '../../raw_videos/google-drive'\n",
+    "repaired_dir = os.path.join(raw_dir,'repaired')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Detect and decide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_files = sorted(glob(os.path.join(raw_dir,'*.avi')))\n",
+    "\n",
+    "repair_info = {}\n",
+    "\n",
+    "conv = Converter()\n",
+    "for f1 in input_files:\n",
+    "    fn,ext = os.path.splitext(os.path.basename(f1))\n",
+    "    if type(conv.probe(f1).video.bitrate)==type(None):\n",
+    "        f2 = os.path.join(repaired_dir,fn+'-repaired'+ext)\n",
+    "        repair_info[fn] = 'repaired' if os.path.exists(f2) else 'corrupt'\n",
+    "    else:\n",
+    "        repair_info[fn] = 'valid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(repair_info.items(),columns=['file','status'])\n",
+    "\n",
+    "writer = pd.ExcelWriter('repair-info.xlsx')\n",
+    "df.to_excel(writer,sheet_name='sheet1',index=None)\n",
+    "sheet = writer.sheets['sheet1']\n",
+    "for col,width in zip('AB',[60,10]):\n",
+    "    sheet.column_dimensions[col].width = width\n",
+    "writer.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Repair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -22,45 +83,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pa_Fri_7dpf_GroupB_n2_CORRUPT   98.7%\n",
-      "Pa_Fri_7dpf_GroupC_n2_CORRUPT   98.6%\n",
-      "Pa_Fri_7dpf_GroupC_n2b_CORRUPT   99.2%\n",
-      "Pa_Fri_7dpf_GroupC_n5_CORRUPT   98.6%\n",
-      "Pa_Sun_14dpf_GroupB_n2c_2020-06-21-114550-0000   90.0%\n",
-      "Pa_Sun_21dpf_GroupC_n1d_2020-06-28-162747-0000   99.3%\n",
-      "Pa_Sun_21dpf_GroupC_n1e_2020-06-28-152755-0000   99.9%\n",
-      "Pa_Sun_21dpf_GroupC_n5_2020-06-28-162753-0000   99.0%\n",
-      "Pa_Sun_7dpf_GroupB_n5a_2020-06-14-135711-0000   99.3%\n",
-      "SF_Sat_28dpf_GroupD_n1a_2020-06-27-175703-0000   99.5%\n",
-      "SF_Sat_28dpf_GroupD_n1b_2020-06-27-175700-0000-020   99.3%\n",
-      "SF_Sat_28dpf_GroupD_n1c_2020-06-27-165707-0000   98.2%\n",
-      "SF_Sat_7dpf_GroupA_n2a_CORRUPT   98.9%\n",
-      "SF_Sat_7dpf_GroupA_n2b_CORRUPT   99.9%\n",
-      "SF_Sat_7dpf_GroupA_n5_CORRUPT   99.9%\n",
-      "SF_Sat_7dpf_GroupB_n2b_CORRUPT___   99.6%\n",
-      "SF_Sat_7dpf_GroupC_n2a_CORRUPT   98.7%\n",
-      "SF_Sat_7dpf_GroupC_n2c_CORRUPT   99.1%\n",
-      "SF_Sat_7dpf_GroupC_n5_CORRUPT   99.7%\n",
-      "SF_Sat_7dpf_GroupD_n2b_CORRUPT   98.5%\n",
-      "SF_Sat_7dpf_GroupD_n2b_CORRUPT_   99.4%\n",
-      "SF_Sat_7dpf_GroupD_n5_CORRUPT   99.5%\n"
+      "Pa_Sun_14dpf_GroupB_n2c_2020-06-21-114550-0000   90.0%\r\n"
      ]
     }
    ],
    "source": [
-    "raw_dir = '../../raw_videos/google-drive'\n",
-    "repaired_dir = '../../raw_videos/repaired'\n",
-    "\n",
-    "\n",
     "input_files = sorted(glob(os.path.join(raw_dir,'*.avi')))\n",
     "\n",
     "conv = Converter()\n",
     "for f1 in input_files:\n",
-    "    info = conv.probe(f1)\n",
-    "    if type(info.video.bitrate)==type(None):\n",
+    "    if type(conv.probe(f1).video.bitrate)==type(None):\n",
     "        fn,ext = os.path.splitext(os.path.basename(f1))\n",
     "        f2 = os.path.join(repaired_dir,fn+'-repaired'+ext)\n",
     "        if not os.path.exists(f2):\n",
+    "#             print(fn)\n",
     "            convert = conv.convert(f1, f2, {\n",
     "                'format':'avi', \n",
     "                'video': {'codec':'copy'},\n",
