- cvt/TrAQ/Tank.py: Improve tank detection interface. The three points are now draggable. Clicking once there are three points on the image no longer does anything.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -191,8 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi\n",
-      "     Tank detection interrupted.\n"
+      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi\n"
      ]
     }
    ],
